--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.volley:volley:1.1.1'
+    /*Gson*/
     implementation 'com.google.code.gson:gson:2.8.5'
+    /*Glide*/
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.android.support:design:28.0.0'
@@ -74,7 +76,26 @@ dependencies {
     implementation 'com.zzhoujay.richtext:richtext:3.0.7'
     /*RichText 对html解析的补充*/
     implementation 'com.zzhoujay:html:1.0.2'
+    /*https://github.com/ReactiveX/RxAndroid*/
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    /*https://square.github.io/retrofit/*/
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    /*Alipay*/
+    implementation files('libs/alipaySdk-20180601.jar')
+    /*https://square.github.io/okhttp/*/
+    implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.0'
+    /*EventBus*/
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    /*https://github.com/google/ExoPlayer*/
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.2'
 
+    /*https://github.com/wasabeef/richeditor-android*/
+    implementation 'jp.wasabeef:richeditor-android:1.2.2'
 }
 repositories {
     mavenCentral()
