--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hekai.xunw">
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <!-- 允许程序打开网络套接字 -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- 允许程序设置内置sd卡的写权限 -->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- 允许程序打开网络套接字 -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 允许程序设置内置sd卡的写权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!-- 允许程序获取网络状态 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- 允许程序访问WiFi网络信息 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!-- 允许程序读写手机状态和身份 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <!-- 允许程序访问CellID或WiFi热点来获取粗略的位置 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 允许程序获取网络状态 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 允许程序访问WiFi网络信息 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 允许程序读写手机状态和身份 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- 允许程序访问CellID或WiFi热点来获取粗略的位置 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
@@ -25,15 +19,13 @@
         android:roundIcon="@drawable/xw_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".activityTest.RetrofitUploadActivity"></activity>
         <!-- 高德地图Key -->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="9bade83cea43639e872974c03e1760e1" />
 
-        <service android:name="com.amap.api.location.APSService" />
-
-        <!-- FileProvider -->
+        <service android:name="com.amap.api.location.APSService" /> <!-- FileProvider -->
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.hekai.xunw.fileprovider"
@@ -53,7 +45,7 @@
         </activity>
         <activity android:name=".activity.TabTestActivity" />
         <activity android:name=".activity.TextTestActivity" />
-        <activity android:name=".activityTest.CardItemActivity" />
+        <activity android:name=".activity.Camera22Activity" />
         <activity android:name=".activity.FoodDetailsActivity" />
         <activity
             android:name=".activity.RichTextActivity"
@@ -83,11 +75,15 @@
         <activity
             android:name=".activity.PublishActivity"
             android:label="@string/title_activity_publish"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity
             android:name=".activity.SearchActivity"
             android:label="@string/title_activity_search"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".activityTest.ObserableActivity" />
+        <activity android:name=".activity.RichEditorActivity" />
+        <activity android:name=".activity.Camera2Activity" />
     </application>
 
 </manifest>
